Created page with "[[Selection_methods/bg|Методите са избиране]] във FreeCAD позволяват избиране на обекти в [[Interface/bg|интерфейса на FreeCAD]]: като [[[3D_View/bg|3D Изглед]], [[Tree_View/bg|Дарвовидния изглед]], [[Selection_View|selection view]] и други диалогови прозорци. Някои методи за подбор са специфични за работната маса и..."

--- a/wiki/bg/Selection_methods.html
+++ b/wiki/bg/Selection_methods.html
@@ -23,8 +23,10 @@
 <p><span id="Overview"></span>
 </p>
 <h2><span id=".D0.9E.D0.B1.D1.89_.D0.BF.D1.80.D0.B5.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="&#1054;&#1073;&#1097;_&#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;">&#1054;&#1073;&#1097; &#1087;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076;</span></h2>
-<p><a href="../Selection_methods.html" title="Selection methods">Selection methods</a> in FreeCAD allow picking objects in the <a href="../Interface.html" title="Interface">FreeCAD Interface</a>: such as <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>, <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a>, <a href="../Selection_view.html" class="mw-redirect" title="Selection view">selection view</a>, and other dialogs. Some selection methods are workbench specific and are documented in the particular workbench documentation.
+<div class="mw-translate-fuzzy">
+<p><a class="mw-selflink selflink">&#1052;&#1077;&#1090;&#1086;&#1076;&#1080;&#1090;&#1077; &#1089;&#1072; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</a> &#1074;&#1098;&#1074; FreeCAD &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072;&#1090; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; <a href="../bg/Interface.html" title="Interface/bg">&#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072; &#1085;&#1072; FreeCAD</a>: &#1082;&#1072;&#1090;&#1086; [[[3D_View/bg|3D &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;]], <a href="../bg/Tree_View.html" title="Tree View/bg">&#1044;&#1072;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a>, <a href="../Selection_View.html" title="Selection View">selection view</a> &#1080; &#1076;&#1088;&#1091;&#1075;&#1080; &#1076;&#1080;&#1072;&#1083;&#1086;&#1075;&#1086;&#1074;&#1080; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1094;&#1080;. &#1053;&#1103;&#1082;&#1086;&#1080; &#1084;&#1077;&#1090;&#1086;&#1076;&#1080; &#1079;&#1072; &#1087;&#1086;&#1076;&#1073;&#1086;&#1088; &#1089;&#1072; &#1089;&#1087;&#1077;&#1094;&#1080;&#1092;&#1080;&#1095;&#1085;&#1080; &#1079;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072;&#1090;&#1072; &#1084;&#1072;&#1089;&#1072; &#1080; &#1089;&#1072; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;&#1088;&#1072;&#1085;&#1080; &#1074; &#1082;&#1086;&#1085;&#1082;&#1088;&#1077;&#1090;&#1085;&#1072;&#1090;&#1072; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072;&#1090;&#1072; &#1084;&#1072;&#1089;&#1072;.
 </p>
+</div>
 <h2><span class="mw-headline" id="3D_view">3D view</span></h2>
 <p>In the <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a> there are various ways of selecting objects.
 </p>
@@ -106,13 +108,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124070259
+Cached time: 20260124070716
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.072 seconds
-Real time usage: 0.101 seconds
-Preprocessor visited node count: 276/1000000
+CPU time usage: 0.070 seconds
+Real time usage: 0.114 seconds
+Preprocessor visited node count: 277/1000000
 Post&#8208;expand include size: 9778/2097152 bytes
 Template argument size: 2745/2097152 bytes
 Highest expansion depth: 5/100
@@ -122,19 +124,19 @@ Unstrip post&#8208;expand size: 4760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.752      1 -total
- 35.91%    7.094      1 Template:Userdocnavi/bg
- 15.33%    3.028      1 Template:Navigation_menu_2
- 13.25%    2.617      3 Template:Code
- 10.45%    2.064      2 Template:Docnav
-  6.78%    1.340      1 Template:Caption
-  6.46%    1.276      3 Template:Incode
-  5.83%    1.151      1 Template:Button
-  5.51%    1.089      4 Template:KEY
-  5.14%    1.015      1 Template:TOCright
+100.00%   20.918      1 -total
+ 29.40%    6.149      1 Template:Userdocnavi/bg
+ 12.08%    2.527      3 Template:Code
+ 11.51%    2.407      2 Template:Docnav
+ 10.53%    2.203      1 Template:Navigation_menu_2
+  8.33%    1.742      1 Template:Caption
+  7.89%    1.651      1 Template:TOCright
+  6.96%    1.456      4 Template:KEY
+  6.79%    1.421      3 Template:Incode
+  5.16%    1.079      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124070259 and revision id 1743229. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124070716 and revision id 1743231. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
