--- a/wiki/bg/Selection_methods.html
+++ b/wiki/bg/Selection_methods.html
@@ -27,7 +27,9 @@
 <p><a class="mw-selflink selflink">&#1052;&#1077;&#1090;&#1086;&#1076;&#1080;&#1090;&#1077; &#1089;&#1072; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</a> &#1074;&#1098;&#1074; FreeCAD &#1087;&#1086;&#1079;&#1074;&#1086;&#1083;&#1103;&#1074;&#1072;&#1090; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080; &#1074; <a href="../bg/Interface.html" title="Interface/bg">&#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072; &#1085;&#1072; FreeCAD</a>: &#1082;&#1072;&#1090;&#1086; [[[3D_View/bg|3D &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;]], <a href="../bg/Tree_View.html" title="Tree View/bg">&#1044;&#1072;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1085;&#1080;&#1103; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a>, <a href="../Selection_View.html" title="Selection View">selection view</a> &#1080; &#1076;&#1088;&#1091;&#1075;&#1080; &#1076;&#1080;&#1072;&#1083;&#1086;&#1075;&#1086;&#1074;&#1080; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1094;&#1080;. &#1053;&#1103;&#1082;&#1086;&#1080; &#1084;&#1077;&#1090;&#1086;&#1076;&#1080; &#1079;&#1072; &#1087;&#1086;&#1076;&#1073;&#1086;&#1088; &#1089;&#1072; &#1089;&#1087;&#1077;&#1094;&#1080;&#1092;&#1080;&#1095;&#1085;&#1080; &#1079;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072;&#1090;&#1072; &#1084;&#1072;&#1089;&#1072; &#1080; &#1089;&#1072; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;&#1088;&#1072;&#1085;&#1080; &#1074; &#1082;&#1086;&#1085;&#1082;&#1088;&#1077;&#1090;&#1085;&#1072;&#1090;&#1072; &#1076;&#1086;&#1082;&#1091;&#1084;&#1077;&#1085;&#1090;&#1072;&#1094;&#1080;&#1103; &#1085;&#1072; &#1088;&#1072;&#1073;&#1086;&#1090;&#1085;&#1072;&#1090;&#1072; &#1084;&#1072;&#1089;&#1072;.
 </p>
 </div>
-<h2><span class="mw-headline" id="3D_view">3D view</span></h2>
+<p><span id="3D_view"></span>
+</p>
+<h3><span id="3D_.D0.98.D0.B7.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="3D_&#1048;&#1079;&#1075;&#1083;&#1077;&#1076;">3D &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;</span></h3>
 <p>In the <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a> there are various ways of selecting objects.
 </p>
 <h3><span class="mw-headline" id="Simple_selection">Simple selection</span></h3>
@@ -108,13 +110,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124070716
+Cached time: 20260124070735
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.070 seconds
-Real time usage: 0.114 seconds
-Preprocessor visited node count: 277/1000000
+CPU time usage: 0.101 seconds
+Real time usage: 0.169 seconds
+Preprocessor visited node count: 278/1000000
 Post&#8208;expand include size: 9778/2097152 bytes
 Template argument size: 2745/2097152 bytes
 Highest expansion depth: 5/100
@@ -124,19 +126,19 @@ Unstrip post&#8208;expand size: 4760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.918      1 -total
- 29.40%    6.149      1 Template:Userdocnavi/bg
- 12.08%    2.527      3 Template:Code
- 11.51%    2.407      2 Template:Docnav
- 10.53%    2.203      1 Template:Navigation_menu_2
-  8.33%    1.742      1 Template:Caption
-  7.89%    1.651      1 Template:TOCright
-  6.96%    1.456      4 Template:KEY
-  6.79%    1.421      3 Template:Incode
-  5.16%    1.079      1 Template:MenuCommand
+100.00%   37.481      1 -total
+ 29.30%   10.981      1 Template:Userdocnavi/bg
+ 13.19%    4.944      1 Template:Navigation_menu_2
+ 12.49%    4.680      3 Template:Code
+  9.35%    3.506      2 Template:Docnav
+  8.92%    3.345      3 Template:Incode
+  8.14%    3.051      1 Template:Button
+  7.89%    2.957      1 Template:Caption
+  6.55%    2.455      1 Template:MenuCommand
+  6.23%    2.336      4 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124070716 and revision id 1743231. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124070735 and revision id 1743233. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
