--- a/wiki/bg/Selection_methods.html
+++ b/wiki/bg/Selection_methods.html
@@ -9,7 +9,7 @@
 <li><a href="../pt/Selection_methods.html" class="mw-pt-progress mw-pt-progress--complete" title="M&eacute;todos de selec&ccedil;&atilde;o (100% translated)" lang="pt" dir="ltr">portugu&ecirc;s</a></li>
 <li><a href="../pt-br/Selection_methods.html" class="mw-pt-progress mw-pt-progress--high" title="M&eacute;todos de sele&ccedil;&atilde;o (80% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../cs/Selection_methods.html" class="mw-pt-progress mw-pt-progress--high" title="Metody v&yacute;b&#283;ru (97% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--low" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--med" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Selection_methods.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1077;&#1090;&#1086;&#1076;&#1099; &#1074;&#1099;&#1076;&#1077;&#1083;&#1077;&#1085;&#1080;&#1103; (66% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../ja/Selection_methods.html" class="mw-pt-progress mw-pt-progress--low" title="&#12458;&#12502;&#12472;&#12455;&#12463;&#12488;&#12398;&#36984;&#25246;&#26041;&#27861; (11% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
 <li><a href="../ko/Selection_methods.html" class="mw-pt-progress mw-pt-progress--low" title="&#45824;&#49345;&#47932; &#49440;&#53469; &#48169;&#48277; (11% translated)" lang="ko" dir="ltr">&#54620;&#44397;&#50612;</a></li></ul></div>
@@ -27,7 +27,7 @@
 </p><p><span id="3D_view"></span>
 </p>
 <h3><span id="3D_.D0.98.D0.B7.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="3D_&#1048;&#1079;&#1075;&#1083;&#1077;&#1076;">3D &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;</span></h3>
-<p>In the <a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a> there are various ways of selecting objects.
+<p>&#1042; <a href="../bg/3D_View.html" title="3D View/bg">3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a> &#1080;&#1084;&#1072; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1085;&#1072;&#1095;&#1080;&#1085;&#1080; &#1079;&#1072; &#1080;&#1079;&#1073;&#1086;&#1088; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;.
 </p>
 <h3><span class="mw-headline" id="Simple_selection">Simple selection</span></h3>
 <p>Simple selection with the mouse (by default left-click) and pre-selection (hover) are described in the <a href="../Mouse_navigation.html" title="Mouse navigation">mouse navigation</a> page.
@@ -107,12 +107,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124070808
+Cached time: 20260124071233
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.076 seconds
-Real time usage: 0.137 seconds
+CPU time usage: 0.066 seconds
+Real time usage: 0.110 seconds
 Preprocessor visited node count: 277/1000000
 Post&#8208;expand include size: 9778/2097152 bytes
 Template argument size: 2745/2097152 bytes
@@ -123,19 +123,19 @@ Unstrip post&#8208;expand size: 4760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   35.076      1 -total
- 29.36%   10.299      1 Template:Userdocnavi/bg
- 11.50%    4.032      1 Template:Navigation_menu_2
- 11.43%    4.011      3 Template:Code
-  9.97%    3.497      2 Template:Docnav
-  9.72%    3.410      1 Template:MenuCommand
-  8.99%    3.154      3 Template:Incode
-  8.00%    2.806      1 Template:Caption
-  7.47%    2.620      1 Template:TOCright
-  5.54%    1.942      1 Template:Button
+100.00%   19.327      1 -total
+ 31.22%    6.033      1 Template:Userdocnavi/bg
+ 11.75%    2.270      2 Template:Docnav
+ 11.63%    2.247      1 Template:Navigation_menu_2
+ 11.53%    2.229      3 Template:Code
+  7.38%    1.427      3 Template:Incode
+  7.23%    1.397      1 Template:Caption
+  6.49%    1.255      1 Template:TOCright
+  6.47%    1.251      4 Template:KEY
+  6.26%    1.210      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124070808 and revision id 1743235. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071233 and revision id 1743237. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
