--- a/wiki/bg/Selection_methods.html
+++ b/wiki/bg/Selection_methods.html
@@ -28,8 +28,9 @@
 </p>
 <h3><span id="3D_.D0.98.D0.B7.D0.B3.D0.BB.D0.B5.D0.B4"></span><span class="mw-headline" id="3D_&#1048;&#1079;&#1075;&#1083;&#1077;&#1076;">3D &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;</span></h3>
 <p>&#1042; <a href="../bg/3D_View.html" title="3D View/bg">3D &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a> &#1080;&#1084;&#1072; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1085;&#1072;&#1095;&#1080;&#1085;&#1080; &#1079;&#1072; &#1080;&#1079;&#1073;&#1086;&#1088; &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;.
+</p><p><span id="Simple_selection"></span>
 </p>
-<h3><span class="mw-headline" id="Simple_selection">Simple selection</span></h3>
+<h3><span id=".D0.9F.D1.80.D0.BE.D1.81.D1.82.D0.BE_.D0.B8.D0.B7.D0.B1.D0.B8.D1.80.D0.B0.D0.BD.D0.B5"></span><span class="mw-headline" id="&#1055;&#1088;&#1086;&#1089;&#1090;&#1086;_&#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;">&#1055;&#1088;&#1086;&#1089;&#1090;&#1086; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</span></h3>
 <p>Simple selection with the mouse (by default left-click) and pre-selection (hover) are described in the <a href="../Mouse_navigation.html" title="Mouse navigation">mouse navigation</a> page.
 </p>
 <h3><span class="mw-headline" id="Repeated_clicks">Repeated clicks</span></h3>
@@ -107,13 +108,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124071233
+Cached time: 20260124071253
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.066 seconds
-Real time usage: 0.110 seconds
-Preprocessor visited node count: 277/1000000
+CPU time usage: 0.082 seconds
+Real time usage: 0.117 seconds
+Preprocessor visited node count: 278/1000000
 Post&#8208;expand include size: 9778/2097152 bytes
 Template argument size: 2745/2097152 bytes
 Highest expansion depth: 5/100
@@ -123,19 +124,19 @@ Unstrip post&#8208;expand size: 4760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   19.327      1 -total
- 31.22%    6.033      1 Template:Userdocnavi/bg
- 11.75%    2.270      2 Template:Docnav
- 11.63%    2.247      1 Template:Navigation_menu_2
- 11.53%    2.229      3 Template:Code
-  7.38%    1.427      3 Template:Incode
-  7.23%    1.397      1 Template:Caption
-  6.49%    1.255      1 Template:TOCright
-  6.47%    1.251      4 Template:KEY
-  6.26%    1.210      1 Template:Button
+100.00%   21.146      1 -total
+ 30.66%    6.483      1 Template:Userdocnavi/bg
+ 14.36%    3.036      1 Template:Navigation_menu_2
+ 11.96%    2.529      3 Template:Code
+  8.81%    1.862      2 Template:Docnav
+  8.41%    1.778      1 Template:Caption
+  7.47%    1.579      4 Template:KEY
+  7.34%    1.553      3 Template:Incode
+  6.58%    1.391      1 Template:MenuCommand
+  6.25%    1.322      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071233 and revision id 1743237. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071253 and revision id 1743239. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
