--- a/wiki/bg/Selection_methods.html
+++ b/wiki/bg/Selection_methods.html
@@ -31,7 +31,7 @@
 </p><p><span id="Simple_selection"></span>
 </p>
 <h3><span id=".D0.9F.D1.80.D0.BE.D1.81.D1.82.D0.BE_.D0.B8.D0.B7.D0.B1.D0.B8.D1.80.D0.B0.D0.BD.D0.B5"></span><span class="mw-headline" id="&#1055;&#1088;&#1086;&#1089;&#1090;&#1086;_&#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;">&#1055;&#1088;&#1086;&#1089;&#1090;&#1086; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</span></h3>
-<p>Simple selection with the mouse (by default left-click) and pre-selection (hover) are described in the <a href="../Mouse_navigation.html" title="Mouse navigation">mouse navigation</a> page.
+<p>&#1055;&#1088;&#1086;&#1089;&#1090; &#1080;&#1079;&#1073;&#1086;&#1088; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; (&#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1089; &#1083;&#1103;&#1074;&#1086; &#1097;&#1088;&#1072;&#1082;&#1074;&#1072;&#1085;&#1077;) &#1080; &#1087;&#1088;&#1077;&#1076;&#1074;&#1072;&#1088;&#1080;&#1090;&#1077;&#1083;&#1077;&#1085; &#1080;&#1079;&#1073;&#1086;&#1088; (&#1087;&#1088;&#1080; &#1079;&#1072;&#1076;&#1098;&#1088;&#1078;&#1072;&#1085;&#1077; &#1085;&#1072; &#1082;&#1091;&#1088;&#1089;&#1086;&#1088;&#1072;) &#1089;&#1072; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080; &#1074; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; <a href="../index.php?title=Mouse_Navigation/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Mouse Navigation/bg (page does not exist)">&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;</a>.
 </p>
 <h3><span class="mw-headline" id="Repeated_clicks">Repeated clicks</span></h3>
 <p>The first click selects a sub-element (vertex, edge or face) of the object under the mouse. A second click selects the whole object.
@@ -108,12 +108,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124071253
+Cached time: 20260124071434
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.117 seconds
+CPU time usage: 0.069 seconds
+Real time usage: 0.121 seconds
 Preprocessor visited node count: 278/1000000
 Post&#8208;expand include size: 9778/2097152 bytes
 Template argument size: 2745/2097152 bytes
@@ -124,19 +124,19 @@ Unstrip post&#8208;expand size: 4760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   21.146      1 -total
- 30.66%    6.483      1 Template:Userdocnavi/bg
- 14.36%    3.036      1 Template:Navigation_menu_2
- 11.96%    2.529      3 Template:Code
-  8.81%    1.862      2 Template:Docnav
-  8.41%    1.778      1 Template:Caption
-  7.47%    1.579      4 Template:KEY
-  7.34%    1.553      3 Template:Incode
-  6.58%    1.391      1 Template:MenuCommand
-  6.25%    1.322      1 Template:TOCright
+100.00%   24.783      1 -total
+ 27.41%    6.792      1 Template:Userdocnavi/bg
+ 14.38%    3.563      3 Template:Code
+ 12.67%    3.139      1 Template:Navigation_menu_2
+  9.89%    2.450      2 Template:Docnav
+  9.22%    2.284      1 Template:Caption
+  8.67%    2.149      1 Template:MenuCommand
+  7.39%    1.831      3 Template:Incode
+  6.88%    1.704      1 Template:TOCright
+  6.63%    1.642      1 Template:Button
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071253 and revision id 1743239. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071434 and revision id 1743241. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
