--- a/wiki/bg/Selection_methods.html
+++ b/wiki/bg/Selection_methods.html
@@ -32,8 +32,9 @@
 </p>
 <h3><span id=".D0.9F.D1.80.D0.BE.D1.81.D1.82.D0.BE_.D0.B8.D0.B7.D0.B1.D0.B8.D1.80.D0.B0.D0.BD.D0.B5"></span><span class="mw-headline" id="&#1055;&#1088;&#1086;&#1089;&#1090;&#1086;_&#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;">&#1055;&#1088;&#1086;&#1089;&#1090;&#1086; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</span></h3>
 <p>&#1055;&#1088;&#1086;&#1089;&#1090; &#1080;&#1079;&#1073;&#1086;&#1088; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; (&#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1089; &#1083;&#1103;&#1074;&#1086; &#1097;&#1088;&#1072;&#1082;&#1074;&#1072;&#1085;&#1077;) &#1080; &#1087;&#1088;&#1077;&#1076;&#1074;&#1072;&#1088;&#1080;&#1090;&#1077;&#1083;&#1077;&#1085; &#1080;&#1079;&#1073;&#1086;&#1088; (&#1087;&#1088;&#1080; &#1079;&#1072;&#1076;&#1098;&#1088;&#1078;&#1072;&#1085;&#1077; &#1085;&#1072; &#1082;&#1091;&#1088;&#1089;&#1086;&#1088;&#1072;) &#1089;&#1072; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080; &#1074; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; <a href="../index.php?title=Mouse_Navigation/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Mouse Navigation/bg (page does not exist)">&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;</a>.
+</p><p><span id="Repeated_clicks"></span>
 </p>
-<h3><span class="mw-headline" id="Repeated_clicks">Repeated clicks</span></h3>
+<h3><span id=".D0.9F.D0.BE.D0.B2.D1.82.D0.B0.D1.80.D1.8F.D1.89.D0.B8_.D1.81.D0.B5_.D0.BA.D0.BB.D0.B8.D0.BA.D0.B2.D0.B0.D0.BD.D0.B8.D1.8F"></span><span class="mw-headline" id="&#1055;&#1086;&#1074;&#1090;&#1072;&#1088;&#1103;&#1097;&#1080;_&#1089;&#1077;_&#1082;&#1083;&#1080;&#1082;&#1074;&#1072;&#1085;&#1080;&#1103;">&#1055;&#1086;&#1074;&#1090;&#1072;&#1088;&#1103;&#1097;&#1080; &#1089;&#1077; &#1082;&#1083;&#1080;&#1082;&#1074;&#1072;&#1085;&#1080;&#1103;</span></h3>
 <p>The first click selects a sub-element (vertex, edge or face) of the object under the mouse. A second click selects the whole object.
 </p><p>The third click extends the selection to its container object (<a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a>, <a href="../Std_Part.html" title="Std Part">Std Part</a>, and others). Further clicks expand the selection up the container chain.
 </p>
@@ -108,13 +109,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124071434
+Cached time: 20260124071519
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.069 seconds
-Real time usage: 0.121 seconds
-Preprocessor visited node count: 278/1000000
+CPU time usage: 0.088 seconds
+Real time usage: 0.140 seconds
+Preprocessor visited node count: 279/1000000
 Post&#8208;expand include size: 9778/2097152 bytes
 Template argument size: 2745/2097152 bytes
 Highest expansion depth: 5/100
@@ -124,19 +125,19 @@ Unstrip post&#8208;expand size: 4760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   24.783      1 -total
- 27.41%    6.792      1 Template:Userdocnavi/bg
- 14.38%    3.563      3 Template:Code
- 12.67%    3.139      1 Template:Navigation_menu_2
-  9.89%    2.450      2 Template:Docnav
-  9.22%    2.284      1 Template:Caption
-  8.67%    2.149      1 Template:MenuCommand
-  7.39%    1.831      3 Template:Incode
-  6.88%    1.704      1 Template:TOCright
-  6.63%    1.642      1 Template:Button
+100.00%   30.883      1 -total
+ 28.28%    8.733      1 Template:Userdocnavi/bg
+ 13.96%    4.310      1 Template:Navigation_menu_2
+ 11.83%    3.652      2 Template:Docnav
+ 11.41%    3.523      3 Template:Incode
+ 10.92%    3.374      3 Template:Code
+ 10.09%    3.117      1 Template:Caption
+  6.20%    1.915      4 Template:KEY
+  6.00%    1.853      1 Template:TOCright
+  5.59%    1.727      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071434 and revision id 1743241. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071519 and revision id 1743243. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
