Updated page Selection methods/bg

--- a/wiki/bg/Selection_methods.html
+++ b/wiki/bg/Selection_methods.html
@@ -31,7 +31,7 @@
 </p><p><span id="Simple_selection"></span>
 </p>
 <h3><span id=".D0.9F.D1.80.D0.BE.D1.81.D1.82.D0.BE_.D0.B8.D0.B7.D0.B1.D0.B8.D1.80.D0.B0.D0.BD.D0.B5"></span><span class="mw-headline" id="&#1055;&#1088;&#1086;&#1089;&#1090;&#1086;_&#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;">&#1055;&#1088;&#1086;&#1089;&#1090;&#1086; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</span></h3>
-<p>&#1055;&#1088;&#1086;&#1089;&#1090; &#1080;&#1079;&#1073;&#1086;&#1088; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; (&#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1089; &#1083;&#1103;&#1074;&#1086; &#1097;&#1088;&#1072;&#1082;&#1074;&#1072;&#1085;&#1077;) &#1080; &#1087;&#1088;&#1077;&#1076;&#1074;&#1072;&#1088;&#1080;&#1090;&#1077;&#1083;&#1077;&#1085; &#1080;&#1079;&#1073;&#1086;&#1088; (&#1087;&#1088;&#1080; &#1079;&#1072;&#1076;&#1098;&#1088;&#1078;&#1072;&#1085;&#1077; &#1085;&#1072; &#1082;&#1091;&#1088;&#1089;&#1086;&#1088;&#1072;) &#1089;&#1072; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080; &#1074; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; <a href="../index.php?title=Mouse_Navigation/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Mouse Navigation/bg (page does not exist)">&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;</a>.
+<p>&#1055;&#1088;&#1086;&#1089;&#1090; &#1080;&#1079;&#1073;&#1086;&#1088; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072; (&#1087;&#1086; &#1087;&#1086;&#1076;&#1088;&#1072;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077; &#1089; &#1083;&#1103;&#1074;&#1086; &#1097;&#1088;&#1072;&#1082;&#1074;&#1072;&#1085;&#1077;) &#1080; &#1087;&#1088;&#1077;&#1076;&#1074;&#1072;&#1088;&#1080;&#1090;&#1077;&#1083;&#1077;&#1085; &#1080;&#1079;&#1073;&#1086;&#1088; (&#1087;&#1088;&#1080; &#1079;&#1072;&#1076;&#1098;&#1088;&#1078;&#1072;&#1085;&#1077; &#1085;&#1072; &#1082;&#1091;&#1088;&#1089;&#1086;&#1088;&#1072;) &#1089;&#1072; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080; &#1074; &#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1072; <a href="../bg/Mouse_navigation.html" title="Mouse navigation/bg">&#1053;&#1072;&#1074;&#1080;&#1075;&#1072;&#1094;&#1080;&#1103; &#1089; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;</a>.
 </p><p><span id="Repeated_clicks"></span>
 </p>
 <h3><span id=".D0.9F.D0.BE.D0.B2.D1.82.D0.B0.D1.80.D1.8F.D1.89.D0.B8_.D1.81.D0.B5_.D0.BA.D0.BB.D0.B8.D0.BA.D0.B2.D0.B0.D0.BD.D0.B8.D1.8F"></span><span class="mw-headline" id="&#1055;&#1086;&#1074;&#1090;&#1072;&#1088;&#1103;&#1097;&#1080;_&#1089;&#1077;_&#1082;&#1083;&#1080;&#1082;&#1074;&#1072;&#1085;&#1080;&#1103;">&#1055;&#1086;&#1074;&#1090;&#1072;&#1088;&#1103;&#1097;&#1080; &#1089;&#1077; &#1082;&#1083;&#1080;&#1082;&#1074;&#1072;&#1085;&#1080;&#1103;</span></h3>
@@ -109,12 +109,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124071519
+Cached time: 20260124071610
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.088 seconds
-Real time usage: 0.140 seconds
+CPU time usage: 0.071 seconds
+Real time usage: 0.113 seconds
 Preprocessor visited node count: 279/1000000
 Post&#8208;expand include size: 9778/2097152 bytes
 Template argument size: 2745/2097152 bytes
@@ -125,19 +125,19 @@ Unstrip post&#8208;expand size: 4760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   30.883      1 -total
- 28.28%    8.733      1 Template:Userdocnavi/bg
- 13.96%    4.310      1 Template:Navigation_menu_2
- 11.83%    3.652      2 Template:Docnav
- 11.41%    3.523      3 Template:Incode
- 10.92%    3.374      3 Template:Code
- 10.09%    3.117      1 Template:Caption
-  6.20%    1.915      4 Template:KEY
-  6.00%    1.853      1 Template:TOCright
-  5.59%    1.727      1 Template:MenuCommand
+100.00%   18.937      1 -total
+ 29.82%    5.647      1 Template:Userdocnavi/bg
+ 12.55%    2.377      2 Template:Docnav
+ 12.49%    2.365      1 Template:Navigation_menu_2
+ 11.67%    2.209      3 Template:Code
+  7.85%    1.486      3 Template:Incode
+  6.95%    1.317      1 Template:TOCright
+  6.94%    1.315      4 Template:KEY
+  6.57%    1.245      1 Template:Caption
+  6.01%    1.138      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071519 and revision id 1743243. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071610 and revision id 1743245. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
