--- a/wiki/bg/Selection_methods.html
+++ b/wiki/bg/Selection_methods.html
@@ -35,7 +35,7 @@
 </p><p><span id="Repeated_clicks"></span>
 </p>
 <h3><span id=".D0.9F.D0.BE.D0.B2.D1.82.D0.B0.D1.80.D1.8F.D1.89.D0.B8_.D1.81.D0.B5_.D0.BA.D0.BB.D0.B8.D0.BA.D0.B2.D0.B0.D0.BD.D0.B8.D1.8F"></span><span class="mw-headline" id="&#1055;&#1086;&#1074;&#1090;&#1072;&#1088;&#1103;&#1097;&#1080;_&#1089;&#1077;_&#1082;&#1083;&#1080;&#1082;&#1074;&#1072;&#1085;&#1080;&#1103;">&#1055;&#1086;&#1074;&#1090;&#1072;&#1088;&#1103;&#1097;&#1080; &#1089;&#1077; &#1082;&#1083;&#1080;&#1082;&#1074;&#1072;&#1085;&#1080;&#1103;</span></h3>
-<p>The first click selects a sub-element (vertex, edge or face) of the object under the mouse. A second click selects the whole object.
+<p>&#1055;&#1098;&#1088;&#1074;&#1086;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1074;&#1072;&#1085;&#1077; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072; &#1087;&#1086;&#1076;-&#1077;&#1083;&#1077;&#1084;&#1077;&#1085;&#1090; (&#1074;&#1088;&#1098;&#1093;, &#1088;&#1098;&#1073; &#1080;&#1083;&#1080; &#1083;&#1080;&#1094;&#1077;) &#1085;&#1072; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072; &#1087;&#1086;&#1076; &#1082;&#1091;&#1088;&#1089;&#1086;&#1088;&#1072; &#1085;&#1072; &#1084;&#1080;&#1096;&#1082;&#1072;&#1090;&#1072;. &#1042;&#1090;&#1086;&#1088;&#1086;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1074;&#1072;&#1085;&#1077; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072; &#1094;&#1077;&#1083;&#1080;&#1103; &#1086;&#1073;&#1077;&#1082;&#1090;.
 </p><p>The third click extends the selection to its container object (<a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a>, <a href="../Std_Part.html" title="Std Part">Std Part</a>, and others). Further clicks expand the selection up the container chain.
 </p>
 <h3><span class="mw-headline" id="Selection_commands">Selection commands</span></h3>
@@ -109,12 +109,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124071610
+Cached time: 20260124071757
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.071 seconds
-Real time usage: 0.113 seconds
+CPU time usage: 0.078 seconds
+Real time usage: 0.119 seconds
 Preprocessor visited node count: 279/1000000
 Post&#8208;expand include size: 9778/2097152 bytes
 Template argument size: 2745/2097152 bytes
@@ -125,19 +125,19 @@ Unstrip post&#8208;expand size: 4760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.937      1 -total
- 29.82%    5.647      1 Template:Userdocnavi/bg
- 12.55%    2.377      2 Template:Docnav
- 12.49%    2.365      1 Template:Navigation_menu_2
- 11.67%    2.209      3 Template:Code
-  7.85%    1.486      3 Template:Incode
-  6.95%    1.317      1 Template:TOCright
-  6.94%    1.315      4 Template:KEY
-  6.57%    1.245      1 Template:Caption
-  6.01%    1.138      1 Template:MenuCommand
+100.00%   21.178      1 -total
+ 24.54%    5.197      1 Template:Userdocnavi/bg
+ 14.13%    2.993      2 Template:Docnav
+ 11.72%    2.481      1 Template:Navigation_menu_2
+ 10.67%    2.261      3 Template:Code
+  8.42%    1.784      1 Template:TOCright
+  8.20%    1.736      1 Template:Button
+  7.83%    1.659      3 Template:Incode
+  7.81%    1.653      4 Template:KEY
+  6.54%    1.386      1 Template:MenuCommand
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071610 and revision id 1743245. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071756 and revision id 1743247. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
