--- a/wiki/bg/Selection_methods.html
+++ b/wiki/bg/Selection_methods.html
@@ -39,7 +39,7 @@
 </p><p>&#1058;&#1088;&#1077;&#1090;&#1086;&#1090;&#1086; &#1097;&#1088;&#1072;&#1082;&#1074;&#1072;&#1085;&#1077; &#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1103;&#1074;&#1072; &#1089;&#1077;&#1083;&#1077;&#1082;&#1094;&#1080;&#1103;&#1090;&#1072; &#1076;&#1086; &#1089;&#1074;&#1086;&#1103; &#1082;&#1086;&#1085;&#1090;&#1077;&#1081;&#1085;&#1077;&#1088;&#1077;&#1085; &#1086;&#1073;&#1077;&#1082;&#1090; (<a href="../PartDesign_Body.html" title="PartDesign Body">PartDesign Body</a>, <a href="../Std_Part.html" title="Std Part">Std Part</a> &#1080; &#1076;&#1088;&#1091;&#1075;&#1080;). &#1044;&#1086;&#1087;&#1098;&#1083;&#1085;&#1080;&#1090;&#1077;&#1083;&#1085;&#1080; &#1082;&#1083;&#1080;&#1082;&#1074;&#1072;&#1085;&#1080;&#1103; &#1088;&#1072;&#1079;&#1096;&#1080;&#1088;&#1103;&#1074;&#1072;&#1090; &#1089;&#1077;&#1083;&#1077;&#1082;&#1094;&#1080;&#1103;&#1090;&#1072; &#1085;&#1072;&#1075;&#1086;&#1088;&#1077; &#1087;&#1086; &#1074;&#1077;&#1088;&#1080;&#1075;&#1072;&#1090;&#1072; &#1082;&#1086;&#1085;&#1090;&#1077;&#1081;&#1085;&#1077;&#1088;&#1080;.
 </p><p><span id="Selection_commands"></span>
 </p>
-<h3><span id=".D0.9A.D0.BE.D0.BC.D0.B0.D0.BD.D0.B4.D0.B0_.D0.B7.D0.B0_.D0.B8.D0.B7.D0.B1.D0.B8.D1.80.D0.B0.D0.BD.D0.B5"></span><span class="mw-headline" id="&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1072;_&#1079;&#1072;_&#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;">&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1072; &#1079;&#1072; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</span></h3>
+<h3><span id=".D0.9A.D0.BE.D0.BC.D0.B0.D0.BD.D0.B4.D0.B8_.D0.B7.D0.B0_.D0.B8.D0.B7.D0.B1.D0.B8.D1.80.D0.B0.D0.BD.D0.B5"></span><span class="mw-headline" id="&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;_&#1079;&#1072;_&#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;">&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080; &#1079;&#1072; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</span></h3>
 <ul><li>To select all objects: <a href="../Std_SelectAll.html" title="Std SelectAll">Std SelectAll</a>.</li>
 <li>To box select multiple main objects: <a href="../Std_BoxSelection.html" title="Std BoxSelection">Std BoxSelection</a>.</li>
 <li>To box select multiple faces: <a href="../Std_BoxElementSelection.html" title="Std BoxElementSelection">Std BoxElementSelection</a> or <a href="../Part_BoxSelection.html" title="Part BoxSelection">Part BoxSelection</a>.</li></ul>
@@ -110,12 +110,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124071904
+Cached time: 20260124071920
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.079 seconds
-Real time usage: 0.145 seconds
+CPU time usage: 0.065 seconds
+Real time usage: 0.093 seconds
 Preprocessor visited node count: 280/1000000
 Post&#8208;expand include size: 9778/2097152 bytes
 Template argument size: 2745/2097152 bytes
@@ -126,19 +126,19 @@ Unstrip post&#8208;expand size: 4760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   40.913      1 -total
- 28.93%   11.837      3 Template:Incode
- 19.85%    8.123      1 Template:TOCright
- 18.03%    7.377      1 Template:Userdocnavi/bg
-  8.26%    3.380      3 Template:Code
-  7.30%    2.985      1 Template:Navigation_menu_2
-  6.69%    2.738      2 Template:Docnav
-  4.98%    2.039      4 Template:KEY
-  4.10%    1.678      1 Template:Caption
-  3.39%    1.385      1 Template:MenuCommand
+100.00%   18.817      1 -total
+ 27.73%    5.218      1 Template:Userdocnavi/bg
+ 12.22%    2.300      3 Template:Code
+ 12.05%    2.268      2 Template:Docnav
+ 11.56%    2.176      1 Template:Navigation_menu_2
+  7.86%    1.479      1 Template:Caption
+  7.34%    1.382      1 Template:Button
+  7.13%    1.342      4 Template:KEY
+  6.85%    1.289      3 Template:Incode
+  6.71%    1.263      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071904 and revision id 1743251. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071920 and revision id 1743253. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
