--- a/wiki/bg/Selection_methods.html
+++ b/wiki/bg/Selection_methods.html
@@ -40,9 +40,9 @@
 </p><p><span id="Selection_commands"></span>
 </p>
 <h3><span id=".D0.9A.D0.BE.D0.BC.D0.B0.D0.BD.D0.B4.D0.B8_.D0.B7.D0.B0_.D0.B8.D0.B7.D0.B1.D0.B8.D1.80.D0.B0.D0.BD.D0.B5"></span><span class="mw-headline" id="&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080;_&#1079;&#1072;_&#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;">&#1050;&#1086;&#1084;&#1072;&#1085;&#1076;&#1080; &#1079;&#1072; &#1080;&#1079;&#1073;&#1080;&#1088;&#1072;&#1085;&#1077;</span></h3>
-<ul><li>To select all objects: <a href="../Std_SelectAll.html" title="Std SelectAll">Std SelectAll</a>.</li>
-<li>To box select multiple main objects: <a href="../Std_BoxSelection.html" title="Std BoxSelection">Std BoxSelection</a>.</li>
-<li>To box select multiple faces: <a href="../Std_BoxElementSelection.html" title="Std BoxElementSelection">Std BoxElementSelection</a> or <a href="../Part_BoxSelection.html" title="Part BoxSelection">Part BoxSelection</a>.</li></ul>
+<ul><li>&#1047;&#1072; &#1076;&#1072; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1074;&#1089;&#1080;&#1095;&#1082;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1080;: <a href="../Std_SelectAll.html" title="Std SelectAll">Std SelectAll</a>.</li>
+<li>&#1047;&#1072; &#1076;&#1072; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1085;&#1103;&#1082;&#1086;&#1083;&#1082;&#1086; &#1086;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080; &#1086;&#1073;&#1077;&#1082;&#1090;&#1072;: <a href="../Std_BoxSelection.html" title="Std BoxSelection">Std BoxSelection</a>.</li>
+<li>&#1047;&#1072; &#1076;&#1072; &#1080;&#1079;&#1073;&#1077;&#1088;&#1077;&#1090;&#1077; &#1085;&#1103;&#1082;&#1086;&#1083;&#1082;&#1086; &#1083;&#1080;&#1094;&#1072;: <a href="../Std_BoxElementSelection.html" title="Std BoxElementSelection">Std BoxElementSelection</a> &#1080;&#1083;&#1080; [Part_BoxSelection|Part BoxSelection].</li></ul>
 <h2><span class="mw-headline" id="Selection_view">Selection view</span></h2>
 <p>The <a href="../Selection_view.html" class="mw-redirect" title="Selection view">selection view</a> shows the names of the objects being selected, including their full name within an object, for example, <code>Unnamed#Body.Box001.Face17</code>. 
 </p><p>It also allows to perform some actions like <a href="../Std_ViewFitSelection.html" title="Std ViewFitSelection">Std ViewFitSelection</a>, and sending the object to the <a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a>.
@@ -110,13 +110,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124071920
+Cached time: 20260124072009
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.065 seconds
-Real time usage: 0.093 seconds
-Preprocessor visited node count: 280/1000000
+CPU time usage: 0.078 seconds
+Real time usage: 0.109 seconds
+Preprocessor visited node count: 279/1000000
 Post&#8208;expand include size: 9778/2097152 bytes
 Template argument size: 2745/2097152 bytes
 Highest expansion depth: 5/100
@@ -126,19 +126,19 @@ Unstrip post&#8208;expand size: 4760/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   18.817      1 -total
- 27.73%    5.218      1 Template:Userdocnavi/bg
- 12.22%    2.300      3 Template:Code
- 12.05%    2.268      2 Template:Docnav
- 11.56%    2.176      1 Template:Navigation_menu_2
-  7.86%    1.479      1 Template:Caption
-  7.34%    1.382      1 Template:Button
-  7.13%    1.342      4 Template:KEY
-  6.85%    1.289      3 Template:Incode
-  6.71%    1.263      1 Template:TOCright
+100.00%   23.594      1 -total
+ 33.68%    7.946      1 Template:Userdocnavi/bg
+ 13.29%    3.136      1 Template:Navigation_menu_2
+ 12.01%    2.835      2 Template:Docnav
+  8.85%    2.088      3 Template:Code
+  8.52%    2.010      1 Template:MenuCommand
+  7.07%    1.667      3 Template:Incode
+  6.29%    1.484      1 Template:TOCright
+  6.23%    1.469      1 Template:Caption
+  6.11%    1.442      4 Template:KEY
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124071920 and revision id 1743253. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:412551-0!canonical and timestamp 20260124072009 and revision id 1743255. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
