Updated page Interface/bg

--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -8,7 +8,7 @@
 <li><a href="../pl/Interface.html" class="mw-pt-progress mw-pt-progress--complete" title="Interfejs u&#380;ytkownika (100% translated)" lang="pl" dir="ltr">polski</a></li>
 <li><a href="../pt-br/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="Interface (5% translated)" lang="pt-BR" dir="ltr">portugu&ecirc;s do Brasil</a></li>
 <li><a href="../cs/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="U&#382;ivatelsk&eacute; rozhran&iacute; (14% translated)" lang="cs" dir="ltr">&#269;e&scaron;tina</a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="bg" dir="ltr">&#1073;&#1098;&#1083;&#1075;&#1072;&#1088;&#1089;&#1082;&#1080;</span></li>
 <li><a href="../ru/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#1048;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; (24% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li>
 <li><a href="../zh-cn/Interface.html" class="mw-pt-progress mw-pt-progress--med" title="&#30028;&#38754; (38% translated)" lang="zh-Hans-CN" dir="ltr">&#20013;&#25991;&#65288;&#20013;&#22269;&#22823;&#38470;&#65289;</a></li>
 <li><a href="../ja/Interface.html" class="mw-pt-progress mw-pt-progress--low" title="&#12518;&#12540;&#12470;&#12540;&#12539;&#12452;&#12531;&#12479;&#12501;&#12455;&#12540;&#12473; (5% translated)" lang="ja" dir="ltr">&#26085;&#26412;&#35486;</a></li>
@@ -21,12 +21,13 @@
 </p><p><span typeof="mw:File"><a href="../index.php?title=FreeCAD_interface_base_divisions.svg&amp;filetimestamp=20200314201207&amp;.html" class="mw-file-description"><img src="../File/FreeCAD_interface_base_divisions.svg" decoding="async" width="1024" height="563" class="mw-file-element" data-file-width="1807" data-file-height="994"></a></span>
 </p>
 <p style="text-align:left; font-style:italic; max-width:800px; box-sizing:border-box; margin-block:1em; margin-inline:clamp(1em, 6vw, 2em); padding-inline:clamp(0.75em, 4vw, 2em); word-break:normal; overflow-wrap:break-word;">&#1057;&#1090;&#1072;&#1085;&#1076;&#1072;&#1088;&#1090;&#1085;&#1080;&#1103;&#1090; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089; &#1085;&#1072; &#1074;&#1077;&#1088;&#1089;&#1080;&#1103; v0.19.</p>
+<div class="mw-translate-fuzzy">
 <p>&#1054;&#1089;&#1085;&#1086;&#1074;&#1085;&#1080;&#1103;&#1090; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1077;&#1094; &#1085;&#1072; &#1087;&#1088;&#1080;&#1083;&#1086;&#1078;&#1077;&#1085;&#1080;&#1077;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1073;&#1098;&#1076;&#1077; &#1075;&#1088;&#1091;&#1073;&#1086; &#1088;&#1072;&#1079;&#1076;&#1077;&#1083;&#1077;&#1085; &#1085;&#1072; 11 &#1089;&#1077;&#1082;&#1094;&#1080;&#1080;:
 </p>
 <ol><li><a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a>, &#1082;&#1086;&#1103;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1094;&#1080; &#1087;&#1086;&#1076;&#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1080;</li>
-<li><a href="../3D_view.html" class="mw-redirect" title="3D view">3D view</a>, &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1074;&#1075;&#1088;&#1072;&#1076;&#1077;&#1085; &#1074; <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a></li>
-<li>&#1043;&#1086;&#1088;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, &#1082;&#1086;&#1103;&#1090;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; <a href="../Tree_view.html" class="mw-redirect" title="Tree view">tree view</a> &#1080; <a href="../Task_panel.html" class="mw-redirect" title="Task panel">task panel</a></li>
-<li>&#1044;&#1086;&#1083;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; <a href="../Property_editor.html" class="mw-redirect" title="Property editor">property editor</a></li>
+<li><a href="../bg/3D_View.html" title="3D View/bg">3D &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;</a>, &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1074;&#1075;&#1088;&#1072;&#1076;&#1077;&#1085; &#1074; <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a></li>
+<li>&#1043;&#1086;&#1088;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, &#1082;&#1086;&#1103;&#1090;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; [[Tree_View/bg|&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1077;&#1085; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;] &#1080; <a href="../bg/Task_Panel.html" title="Task Panel/bg">&#1087;&#1072;&#1085;&#1077;&#1083; &#1047;&#1072;&#1076;&#1072;&#1095;&#1080;</a></li>
+<li>&#1044;&#1086;&#1083;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; <a href="../index.php?title=Property_Editor/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Property Editor/bg (page does not exist)">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a></li>
 <li><a href="../Selection_view.html" class="mw-redirect" title="Selection view">selection view</a></li>
 <li><a href="../Report_view.html" class="mw-redirect" title="Report view">report view</a></li>
 <li><a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a></li>
@@ -34,6 +35,7 @@
 <li>&#1047;&#1072; &#1086;&#1073;&#1083;&#1072;&#1089;&#1090;&#1090;&#1072; &#1085;&#1072; &#1083;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;, &#1074;&#1080;&#1078;&#1090;&#1077; &#1089;&#1083;&#1077;&#1076;&#1085;&#1072;&#1090;&#1072; &#1080;&#1085;&#1092;&#1086;&#1088;&#1084;&#1072;&#1094;&#1080;&#1103; &#1079;&#1072; &#1083;&#1077;&#1085;&#1090;&#1080;&#1090;&#1077; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</li>
 <li><a href="../Std_Workbench.html" title="Std Workbench">Workbench selector</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1089;&#1072;&#1084; &#1087;&#1086; &#1089;&#1077;&#1073;&#1077; &#1089;&#1080; &#1077; &#1083;&#1077;&#1085;&#1090;&#1072; &#1089; &#1080;&#1085;&#1089;&#1090;&#1088;&#1091;&#1084;&#1077;&#1085;&#1090;&#1080;</li>
 <li><a href="../Standard_Menu.html" title="Standard Menu">standard menu</a></li></ol>
+</div>
 <p><span id="Components_of_the_interface"></span>
 </p>
 <h2><span id=".D0.9A.D0.BE.D0.BC.D0.BF.D0.BE.D0.BD.D0.B5.D0.BD.D1.82.D0.B8_.D0.BD.D0.B0_.D0.B8.D0.BD.D1.82.D0.B5.D1.80.D1.84.D0.B5.D0.B9.D1.81.D0.B0"></span><span class="mw-headline" id="&#1050;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1080;_&#1085;&#1072;_&#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072;">&#1050;&#1086;&#1084;&#1087;&#1086;&#1085;&#1077;&#1085;&#1090;&#1080; &#1085;&#1072; &#1080;&#1085;&#1090;&#1077;&#1088;&#1092;&#1077;&#1081;&#1089;&#1072;</span></h2>
@@ -135,34 +137,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124074455
+Cached time: 20260124074815
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.074 seconds
-Real time usage: 0.119 seconds
-Preprocessor visited node count: 357/1000000
+CPU time usage: 0.079 seconds
+Real time usage: 0.149 seconds
+Preprocessor visited node count: 313/1000000
 Post&#8208;expand include size: 11845/2097152 bytes
 Template argument size: 3410/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 0/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 2535/5000000 bytes
+Unstrip post&#8208;expand size: 2531/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   20.851      1 -total
- 31.03%    6.470      1 Template:Interface_navi/bg
- 19.70%    4.107      1 Template:Userdocnavi/bg
- 17.69%    3.689      7 Template:StdMenu
- 14.49%    3.022      1 Template:Version
- 11.08%    2.310      2 Template:Navigation_menu_2
-  7.12%    1.484     20 Template:MenuCommand
-  5.11%    1.066      1 Template:TOCright
-  4.74%    0.989      1 Template:Caption
+100.00%   26.878      1 -total
+ 31.49%    8.464      1 Template:Interface_navi/bg
+ 18.93%    5.088      7 Template:StdMenu
+ 18.78%    5.049      1 Template:Userdocnavi/bg
+ 12.02%    3.230      2 Template:Navigation_menu_2
+ 10.17%    2.734     20 Template:MenuCommand
+  9.39%    2.524      1 Template:Version
+  6.27%    1.684      1 Template:Caption
+  6.05%    1.626      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260124074455 and revision id 1743259. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260124074815 and revision id 1743262. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
