--- a/wiki/bg/Interface.html
+++ b/wiki/bg/Interface.html
@@ -26,7 +26,7 @@
 <ol><li><a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a>, &#1082;&#1086;&#1103;&#1090;&#1086; &#1084;&#1086;&#1078;&#1077; &#1076;&#1072; &#1089;&#1098;&#1076;&#1098;&#1088;&#1078;&#1072;&#1090; &#1088;&#1072;&#1079;&#1083;&#1080;&#1095;&#1085;&#1080; &#1087;&#1088;&#1086;&#1079;&#1086;&#1088;&#1094;&#1080; &#1087;&#1086;&#1076;&#1089;&#1090;&#1088;&#1072;&#1085;&#1080;&#1094;&#1080;</li>
 <li><a href="../bg/3D_View.html" title="3D View/bg">3D &#1048;&#1079;&#1075;&#1083;&#1077;&#1076;</a>, &#1086;&#1073;&#1080;&#1082;&#1085;&#1086;&#1074;&#1077;&#1085;&#1086; &#1074;&#1075;&#1088;&#1072;&#1076;&#1077;&#1085; &#1074; <a href="../Main_view_area.html" class="mw-redirect" title="Main view area">main view area</a></li>
 <li>&#1043;&#1086;&#1088;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, &#1082;&#1086;&#1103;&#1090;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; <a href="../bg/Tree_View.html" title="Tree View/bg">&#1044;&#1098;&#1088;&#1074;&#1086;&#1074;&#1080;&#1076;&#1077;&#1085; &#1080;&#1079;&#1075;&#1083;&#1077;&#1076;</a> &#1080; <a href="../bg/Task_Panel.html" title="Task Panel/bg">&#1087;&#1072;&#1085;&#1077;&#1083; &#1047;&#1072;&#1076;&#1072;&#1095;&#1080;</a></li>
-<li>&#1044;&#1086;&#1083;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; <a href="../index.php?title=Property_Editor/bg&amp;action=edit&amp;redlink=1.html" class="new" title="Property Editor/bg (page does not exist)">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a></li>
+<li>&#1044;&#1086;&#1083;&#1085;&#1072;&#1090;&#1072; &#1095;&#1072;&#1089;&#1090; &#1085;&#1072; <a href="../Combo_view.html" class="mw-redirect" title="Combo view">combo view</a>, &#1082;&#1086;&#1081;&#1090;&#1086; &#1074;&#1082;&#1083;&#1102;&#1095;&#1074;&#1072; <a href="../bg/Property_View.html" title="Property View/bg">&#1055;&#1088;&#1077;&#1075;&#1083;&#1077;&#1076; &#1085;&#1072; &#1089;&#1074;&#1086;&#1081;&#1089;&#1090;&#1074;&#1072;&#1090;&#1072;</a></li>
 <li><a href="../Selection_view.html" class="mw-redirect" title="Selection view">selection view</a></li>
 <li><a href="../Report_view.html" class="mw-redirect" title="Report view">report view</a></li>
 <li><a href="../Python_console.html" class="mw-redirect" title="Python console">Python console</a></li>
@@ -135,12 +135,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260124074922
+Cached time: 20260124075435
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.064 seconds
-Real time usage: 0.096 seconds
+CPU time usage: 0.069 seconds
+Real time usage: 0.112 seconds
 Preprocessor visited node count: 357/1000000
 Post&#8208;expand include size: 11845/2097152 bytes
 Template argument size: 3410/2097152 bytes
@@ -151,18 +151,18 @@ Unstrip post&#8208;expand size: 2535/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   22.167      1 -total
- 27.78%    6.157      1 Template:Interface_navi/bg
- 17.87%    3.961      7 Template:StdMenu
- 17.73%    3.929      1 Template:Userdocnavi/bg
- 15.18%    3.366      2 Template:Navigation_menu_2
-  9.93%    2.202      1 Template:Caption
-  9.91%    2.196      1 Template:TOCright
-  9.48%    2.101     20 Template:MenuCommand
-  9.11%    2.019      1 Template:Version
+100.00%   18.476      1 -total
+ 24.87%    4.594      1 Template:Userdocnavi/bg
+ 24.69%    4.561      1 Template:Interface_navi/bg
+ 18.17%    3.358      7 Template:StdMenu
+ 15.39%    2.843      2 Template:Navigation_menu_2
+  8.73%    1.613      1 Template:TOCright
+  8.35%    1.543      1 Template:Version
+  8.09%    1.495     20 Template:MenuCommand
+  6.62%    1.223      1 Template:Caption
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260124074922 and revision id 1743264. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:410982-0!canonical and timestamp 20260124075435 and revision id 1743266. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
